Bug 1244480 - don't throw when passing random value as the second argument to canvas.getContext. r=bz, a=sylvestre